Closed Bug 1396521 Opened 7 years ago Closed 7 years ago

Crash in @0x0 | mozilla::gl::StreamFromD3DTexture

Categories

(Core :: Graphics, defect)

57 Branch
Unspecified
Windows
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 --- fixed

People

(Reporter: philipp, Assigned: jgilbert)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-198261a2-eca7-4ac5-a4c0-6f9c60170904.
=============================================================
Crashing Thread (0)
Frame 	Module 	Signature 	Source
0 		@0x0 	
1 	xul.dll 	mozilla::gl::StreamFromD3DTexture 	gfx/gl/GLBlitHelperD3D.cpp:36
2 	xul.dll 	mozilla::gl::BindAnglePlanes::BindAnglePlanes(mozilla::gl::GLBlitHelper const* const, unsigned char, RefPtr<ID3D11Texture2D> const* const, __int64 const* const*) 	gfx/gl/GLBlitHelperD3D.cpp:100
3 	xul.dll 	mozilla::gl::GLBlitHelper::BlitAngleYCbCr(unsigned __int64 const (&)[3], mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const&, mozilla::YUVColorSpace, mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gl::OriginPos) 	gfx/gl/GLBlitHelperD3D.cpp:321
4 	xul.dll 	mozilla::gl::GLBlitHelper::BlitImage(mozilla::layers::GPUVideoImage*, mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gl::OriginPos) 	gfx/gl/GLBlitHelperD3D.cpp:205
5 	xul.dll 	mozilla::webgl::TexUnpackImage::TexOrSubImage(bool, bool, char const*, mozilla::WebGLTexture*, StrongGLenum<TexImageTargetDetails>, int, mozilla::webgl::DriverUnpackInfo const*, int, int, int, mozilla::webgl::PackingInfo const&, unsigned int* const) 	dom/canvas/TexUnpackBlob.cpp:708
6 	xul.dll 	mozilla::WebGLTexture::TexImage(char const*, StrongGLenum<TexImageTargetDetails>, int, unsigned int, mozilla::webgl::PackingInfo const&, mozilla::webgl::TexUnpackBlob const*) 	dom/canvas/WebGLTextureUpload.cpp:1295
7 	xul.dll 	mozilla::WebGLTexture::TexImage(char const*, StrongGLenum<TexImageTargetDetails>, int, unsigned int, int, int, int, int, mozilla::webgl::PackingInfo const&, mozilla::TexImageSource const&) 	dom/canvas/WebGLTextureUpload.cpp:463
8 	xul.dll 	mozilla::WebGLContext::TexImage(char const*, unsigned char, unsigned int, int, unsigned int, int, int, int, int, unsigned int, unsigned int, mozilla::TexImageSource const&) 	dom/canvas/WebGLContextTextures.cpp:394
9 	xul.dll 	mozilla::WebGLContext::TexImage2D(unsigned int, int, unsigned int, int, int, int, unsigned int, unsigned int, mozilla::TexImageSource const&) 	dom/canvas/WebGLContext.h:1176
10 	xul.dll 	mozilla::WebGLContext::TexImage2D<mozilla::dom::HTMLVideoElement>(unsigned int, int, unsigned int, int, int, int, unsigned int, unsigned int, mozilla::dom::HTMLVideoElement const&, mozilla::ErrorResult&) 	dom/canvas/WebGLContext.h:1154
11 	xul.dll 	mozilla::WebGLContext::TexImage2D<mozilla::dom::HTMLCanvasElement>(unsigned int, int, unsigned int, unsigned int, unsigned int, mozilla::dom::HTMLCanvasElement const&, mozilla::ErrorResult&) 	dom/canvas/WebGLContext.h:1131
12 	xul.dll 	mozilla::dom::WebGLRenderingContextBinding::texImage2D 	dom/bindings/WebGLRenderingContextBinding.cpp:13151
13 	xul.dll 	mozilla::dom::GenericBindingMethod(JSContext*, unsigned int, JS::Value*) 	dom/bindings/BindingUtils.cpp:3050
14 	xul.dll 	js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) 	js/src/vm/Interpreter.cpp:494
15 	xul.dll 	Interpret 	js/src/vm/Interpreter.cpp:3093
16 	xul.dll 	js::RunScript(JSContext*, js::RunState&) 	js/src/vm/Interpreter.cpp:434
17 	xul.dll 	js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) 	js/src/vm/Interpreter.cpp:512
18 	xul.dll 	JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) 	js/src/jsapi.cpp:2937
19 	xul.dll 	mozilla::dom::EventListener::HandleEvent(JSContext*, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&) 	dom/bindings/EventListenerBinding.cpp:47
20 	xul.dll 	mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JSCompartment*) 	dist/include/mozilla/dom/EventListenerBinding.h:65
21 	xul.dll 	mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, nsIDOMEvent*, mozilla::dom::EventTarget*) 	dom/events/EventListenerManager.cpp:1108
22 	xul.dll 	mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, nsIDOMEvent**, mozilla::dom::EventTarget*, nsEventStatus*) 	dom/events/EventListenerManager.cpp:1283
23 	xul.dll 	mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) 	dom/events/EventDispatcher.cpp:462
24 	xul.dll 	mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, nsIDOMEvent*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) 	dom/events/EventDispatcher.cpp:822
25 	xul.dll 	mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, nsIDOMEvent*, nsPresContext*, nsEventStatus*) 	dom/events/EventDispatcher.cpp:888
26 	xul.dll 	nsINode::DispatchEvent(nsIDOMEvent*, bool*) 	dom/base/nsINode.cpp:1341
27 	xul.dll 	nsContentUtils::DispatchEvent(nsIDocument*, nsISupports*, nsAString const&, bool, bool, bool, bool*, bool) 	dom/base/nsContentUtils.cpp:4554
28 	xul.dll 	mozilla::dom::HTMLMediaElement::DispatchEvent(nsAString const&) 	dom/html/HTMLMediaElement.cpp:6133
29 	xul.dll 	mozilla::SchedulerGroup::Runnable::Run() 	xpcom/threads/SchedulerGroup.cpp:396
30 	xul.dll 	nsThread::ProcessNextEvent(bool, bool*) 	xpcom/threads/nsThread.cpp:1039
31 	xul.dll 	mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) 	ipc/glue/MessagePump.cpp:97
32 	xul.dll 	mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) 	ipc/glue/MessagePump.cpp:301
33 	xul.dll 	MessageLoop::RunHandler() 	ipc/chromium/src/base/message_loop.cc:319
34 	xul.dll 	MessageLoop::Run() 	ipc/chromium/src/base/message_loop.cc:299
35 	xul.dll 	nsBaseAppShell::Run() 	widget/nsBaseAppShell.cpp:158
36 	xul.dll 	nsAppShell::Run() 	widget/windows/nsAppShell.cpp:230
37 	xul.dll 	XRE_RunAppShell() 	toolkit/xre/nsEmbedFunctions.cpp:866
38 	xul.dll 	mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) 	ipc/glue/MessagePump.cpp:269
39 	xul.dll 	MessageLoop::RunHandler() 	ipc/chromium/src/base/message_loop.cc:319
40 	xul.dll 	MessageLoop::Run() 	ipc/chromium/src/base/message_loop.cc:299
41 	xul.dll 	XRE_InitChildProcess(int, char** const, XREChildData const*) 	toolkit/xre/nsEmbedFunctions.cpp:691
42 	firefox.exe 	content_process_main(mozilla::Bootstrap*, int, char** const) 	ipc/contentproc/plugin-container.cpp:63
43 	firefox.exe 	NS_internal_main(int, char**, char**) 	browser/app/nsBrowserApp.cpp:285
44 	firefox.exe 	wmain 	toolkit/xre/nsWindowsWMain.cpp:115
45 	firefox.exe 	__scrt_common_main_seh 	f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:253
46 	kernel32.dll 	BaseThreadInitThunk 	
47 	ntdll.dll 	RtlUserThreadStart

crash reports with this signature newly started appearing in 57.0a1 build 20170903100443 and look related to bug 1322746.
Flags: needinfo?(jgilbert)
Crash Signature: [@ @0x0 | mozilla::gl::StreamFromD3DTexture] → [@ @0x0 | mozilla::gl::StreamFromD3DTexture] [@ 0x0 | mozilla::gl::BindAnglePlanes::BindAnglePlanes]
Comment on attachment 8904804 [details]
Bug 1396521 - Check that we have ANGLE exts for blitting from d3d. -

https://reviewboard.mozilla.org/r/176566/#review181616

r=me.
Attachment #8904804 - Flags: review?(dmu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e9997d3ed861
Check that we have ANGLE exts for blitting from d3d. - r=daoshengmu
https://hg.mozilla.org/mozilla-central/rev/e9997d3ed861
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Assignee: nobody → jgilbert
Flags: needinfo?(jgilbert)
You need to log in before you can comment on or make changes to this bug.